--- a/Урок 15-20. Циклы/Python - PT19-20.html
+++ b/Урок 15-20. Циклы/Python - PT19-20.html
@@ -136,7 +136,8 @@
         <p>Выбор <span class="hl-text">пункта 2</span>:
           <br>— Программа <span class="hl-text">запрашивает с консоли логин</span> и <span class="hl-text">пароль</span>.
           <br>— Если вводятся данные клиента, то <span class="hl-text">показывается меню клиента</span>.
-          <br>— Если вводятся данные администратора, то <span class="hl-text">показывается меню администратора</span>.</p>
+          <br>— Если вводятся данные администратора, то <span class="hl-text">показывается меню администратора</span>.
+        </p>
 
         <h3>Меню клиента:</h3>
         <div class="console">
@@ -165,7 +166,7 @@
 </code></pre>
         </div>
         <p>В <span class="hl-text">меню кабинета</span> выбор <span class="hl-text">пункта 3</span>:
-          <br>— Программа <span class="hl-text">запрашивает с консоли <span class="number"><b>16</b></span>-значный номер карты</span>, и <span class="hl-text">CVV/CVC код</span>.
+          <br>— Программа <span class="hl-text">запрашивает с консоли <code><span class="number"><b>16</b></span></code>-значный номер карты</span>, и <span class="hl-text">CVV/CVC код</span>.
           <br>— Если они совпадают с определёнными данными, то программа <span class="hl-text">запрашивает с консоли сумму</span> и <span class="hl-text">добавляет на баланс карты</span>. В противном случае программа <span class="hl-text">возвращает в меню кабинета</span>.
         </p>
         <p>Выбор <span class="hl-text">пункта 4</span>:
