Updated HW20 - changed code id.

--- a/Урок 15-20. Циклы/Python - HW20.html
+++ b/Урок 15-20. Циклы/Python - HW20.html
@@ -248,7 +248,7 @@
           <br>— <span class="hl-text">Выводит в консоль следующее меню</span>:
         </p>
         <div class="console">
-          <pre><code>Идентификатор: &ltчисло&gt
+          <pre><code>Идентификатор: &ltлогин&gt
 Текущий баланс: &ltчисло&gt
 Арендованные товар: &ltотсутствует/товар&gt
 =========================================
