Updated PT22 - fixed console in 22.1.

--- a/Урок 21-27. Строки. Списки/Python - PT22.html
+++ b/Урок 21-27. Строки. Списки/Python - PT22.html
@@ -129,7 +129,7 @@
 Введите конец среза: <span class="input">7</span>
 Введите шаг среза: <span class="input">1</span>
 
-Полученный срез: Test S</code></pre>
+Полученный срез: Test St</code></pre>
         </div>
       </div>
       <div class="right-rect">
