Updated PT21 - task 21.7 description updated.

--- a/Урок 21-27. Строки. Списки/Python - PT21.html
+++ b/Урок 21-27. Строки. Списки/Python - PT21.html
@@ -182,7 +182,7 @@ gnirtS tesT</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 21.7</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли фамилию</span>, <span class="hl-text">имя</span> и <span class="hl-text">отчество</span>, а затем <span class="hl-text">выводит в консоль первые буквы введённых данных</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли фамилию</span>, <span class="hl-text">имя</span> и <span class="hl-text">отчество</span>, <span class="hl-text">формирует из первых букв новую строку</span>, а затем <span class="hl-text">выводит в консоль полученную строку</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите фамилию: <span class="input">Lebra</span>
